addons/kyverno/policies/edtech-ferpa_parent_access_rights-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-ferpa_parent_access_rights
  annotations:
    rulehub.id: edtech.ferpa_parent_access_rights
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: edtech.ferpa_parent_access_rights: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
